name:               hello-scotty
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable hello-scotty
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      scotty,
                      aeson,
                      postgresql-simple,
                      postgresql-simple-url,
                      transformers,
                      text,
                      bytestring